Fix container width on small screens

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -917,5 +917,10 @@ h2 {
     margin-bottom: 25px;
   }
 }
+@media screen and (max-width: 400px) {
+  .container {
+    max-width: 85%;
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
