--- a/src/scss/pages/artist.scss
+++ b/src/scss/pages/artist.scss
@@ -164,3 +164,9 @@
     margin-bottom: 25px;
   }
 }
+
+@media screen and (max-width: 400px) {
+  .container {
+    max-width: 85%;
+  }
+}
